[package]
name = "data_library"
version = "0.1.0"
authors = ["ckaraliolios <ckaraliolios@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
webview = {package = "web-view",version = "0.6.0", features = ["edge"]}

calamine = "0.17.0"
strum = "0.17.1"
strum_macros = "0.17.1"
clap = "2.33.0"

boolinator = "2.4.0"

rayon = "1.3.0"